--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div id="game">
-        <img id="target" src="../ufotarget.png" alt="Target">
+        <img id="target" src="./ufotarget.png" alt="Target">
         <div id="score">Score: <span id="scoreValue">0</span></div>
         <div id="timer">Time Left: <span id="timerValue">60</span></div>
         <div id="highScore">High Score: <span id="highScoreValue">0</span></div>
